# dunecat

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
docs/: auth-faq.md  auth-presentation.md  hub.md
docs/agents/: domain.md
dunecat/: README.md  cli.py  client.py  datasets.py  download.py  errors.py  files.py  filters.py  format.py  llm.py  query.py  server.py  timestamps.py
dunecat/hub/: app.py  cache.py  crypto.py  db.py  detectors.py  rucio.py  timeouts.py
dunecat/hub/auth/: bearer.py  dep.py  flow.py  session.py
dunecat/hub/routes/: catalog.py  config.py  detectors.py  login.py  me.py
dunecat/web/: app.py  auth.py  cache.py  condb.py  detectors.py  detectors.yaml  routes.py  rucio.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js  main.js  router.js
frontend/src/components/chrome/: AppHeader.vue  AppSidebar.vue  Btn.vue  PageFrame.vue
frontend/src/composables/: useNav.js
frontend/src/styles/: base.css  tokens.css
frontend/src/views/: DatasetsView.vue  DetailView.vue  FilesView.vue  PlaceholderView.vue  QueryView.vue  RunView.vue  RunsView.vue
scripts/: dune-xrdcp.sh  hub-deploy.env  hub-deploy.sh  hub-logs.sh
tests/: test_cli.py  test_client.py  test_datasets.py  test_download.py  test_files.py  test_filters.py  test_format.py  test_query.py  test_replica_grouping.py  test_timestamps.py  test_web.py
tests/hub/: test_catalog.py  test_smoke.py
